Slowly getting stuff working - NB this doesn't include admin static files

--- a/nginx.conf
+++ b/nginx.conf
@@ -48,8 +48,11 @@ http {
 	server {
 		listen 80;
 		server_name localhost;
-		location /site_media  {
-			root /var/www/media/; # Notice this is the /media folder that we create above
+		location ^~ /static/ {
+			root /var/www/exlibris/;
+		}
+		location ^~ /media/ {
+			root /var/www/exlibris/;
 		}
 		location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|doc|xls|exe|pdf|ppt|txt|tar|mid|midi|wav|bmp|rtf|js|mov) {
 			access_log   off;
